Fix Bug: Fix toggle menu on smaller screen

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -30,7 +30,11 @@
     width: 100%;
     height: 400px;
 }
-
+@media (max-width:1000px){
+    .navbar{
+        background: var(--bs-dark);
+    }
+}
 
 @media (max-width:1000px){
 .hero .image-container{
